Native image AOT fixes, distribution build, NativeLibraryResolver auto-resolution
- Fix dual-constructor AOT NPE across 18 services (@Autowired on final fields)
- Add BuildDistCommand for unified native dist builds (CLI + staging + app)
- NativeLibraryResolver: auto-resolve from <binary-dir>/lib/ and parent lib/
- Remove LD_LIBRARY_PATH hacks and launcher scripts — binaries self-resolve
- POM-driven CUDA version via nd4j.cuda.version property
- OSResolver.javacppPlatform() for auto-detecting build platform
- Update .gitignore: add .claude/, .codex/, kompile-rag-builds/, binary types
- New modules: crawl-graph, process-discovery, event-attribution, loaders
- Frontend: unified crawl, graph maintenance, session metrics, attribution
- CLI: train commands, graph maintenance, chat rendering, enforcer tools